--- a/src/components/Content/Packages/Packages.scss
+++ b/src/components/Content/Packages/Packages.scss
@@ -5,5 +5,9 @@
 
   .PackagesTable {
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 3rem;
   }
 }
